--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,34 @@
-body
-{
+body {
     font-family: 'Lato', sans-serif;
     color: #291f1a;
     font-weight: 300;
-    background-color: #19820B ;
+    background-color: #19820B;
+}
+
+#main-nav {
+    width: 100%;
+    text-align: justify;
+    background-color: #ffffff;
+    text-align: right;
+    position: fixed;
+    margin: 0;
+
+}
+
+#main-nav .menu-item {
+    display: inline-block;
+    list-style: none;
+    font-weight: 300;
+
+}
+
+
+#main-nav .menu-item a {
+    text-decoration: none;
+    color: #1ac056;
+    padding: 25px;
+}
+
+#main-nav .menu-item a:hover {
+    color: #291f1a;
 }
