--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,27 @@
+*
+{
+    box-sizing: border-box;
+}
+
 body {
     font-family: 'Lato', sans-serif;
     color: #291f1a;
     font-weight: 300;
     background-color: #19820B;
+    margin: 0;
+}
+
+h1, h2, h3, h4, h5, h6{
+    text-align: center;
 }
 
 #main-nav {
     width: 100%;
     text-align: justify;
-    background-color: #ffffff;
     text-align: right;
     position: fixed;
     margin: 0;
+    z-index: 2;
 
 }
 
@@ -31,4 +41,31 @@ body {
 
 #main-nav .menu-item a:hover {
     color: #291f1a;
+}
+
+#main-header {
+    height: 100vh;
+    margin: 0;
+    background-image: url("../img/header-background.jpg");
+    background-size: cover;
+
+    
+}
+
+#main-header-content {
+	position: absolute;
+    top: 50%;
+    color: white;
+    width: 100%;
+    text-align: center;
+    padding: 30vh%;
+    
+}
+
+span{
+    color: #1ac056;
+}
+
+h1{
+    font-family: 'roboto' , sans-serif;
 }
