--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,7 @@ h1, h2, h3, h4, h5, h6{
     display: inline-block;
     list-style: none;
     font-weight: 300;
+    font-size: 25px;
 
 }
 
@@ -54,7 +55,7 @@ h1, h2, h3, h4, h5, h6{
 
 #main-header-content {
 	position: absolute;
-    top: 50%;
+    top: 30%;
     color: white;
     width: 100%;
     text-align: center;
@@ -68,4 +69,5 @@ span{
 
 h1{
     font-family: 'roboto' , sans-serif;
+    font-size: 75px;
 }
