tło na menu items

--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,8 @@ h1, h2, h3, h4, h5, h6{
     list-style: none;
     font-weight: 300;
     font-size: 25px;
+    background-color: darkslategrey;
+    border-radius: 10%;
 
 }
 
